--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Home</title>
+
+<head>
+    <title>Home</title>
     <!--Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="../public/styles/styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../public/styles/styles.css"> -->
 
     <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="jumbotron">
         <h1 class="display-4">Resume Tracker</h1>
@@ -18,12 +24,13 @@
         <hr class="my-4">
         <p></p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="view.html" id="view-home" role="button">View My Applications</a>
-          <a class="btn btn-primary btn-lg" id="add-home" href="add.html" role="button">Add a New Application</a>
+            <a class="btn btn-primary btn-lg" href="view.html" id="view-home" role="button">View My Applications</a>
+            <a class="btn btn-primary btn-lg" id="add-home" href="add.html" role="button">Add a New Application</a>
         </p>
-      </div>
-      <h2 id="par1_home">
-          Congratulations!  You have applied for ___ jobs!
-      </h2>
+    </div>
+    <h2 id="par1_home">
+        Congratulations! You have applied for ___ jobs!
+    </h2>
 </body>
+
 </html>
