--- a/public/add.html
+++ b/public/add.html
@@ -9,7 +9,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS-->
-  <!-- <link rel="stylesheet" type="text/css" href="../public/styles/styles.css"> -->
+  <link rel="stylesheet" type="text/css" href="../public/styles/styles.css">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -19,19 +19,33 @@
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
 </head>
-
-<div class="jumbotron">
+<body>
+  <div id="container">
+  <!-- Top Navigation Menu -->
+<div class="topnav">
+    <a href="#home" class="active" id="resume1">Resume Tracker</a>
+    <!-- Navigation links (hidden by default) -->
+    <div id="myLinks">
+      <a href="index.html">Home</a>
+      <a href="add.html">Add New Application</a>
+      <a href="view.html">View Applications</a>
+    </div>
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
   <h1>Add a New Application</h1>
+  <p id="dots">•••</p>
+  <a href="view.html" class="btn btn-danger btn-lg" id="view-add">View All Jobs</a>
   <h3>Fill in the information of your job below</h3>
   <hr>
-  <a href="view.html" class="btn btn-danger btn-lg" id="view-add">
-    <span class="fa fa-eye"></span>View All Jobs</a>
-</div>
+
 <div class="row">
 
-  <div class="col-lg-12">
+  <div class="col-lg-12" id="form-background">
 
-    <div class="card">
+    <div class="card" id="form">
       <div class="card-header">
         Application Info
       </div>
@@ -77,7 +91,7 @@
             <input type="text" class="form-control" id="comments" placeholder="">
           </div>
           <div class="form-group">
-            <label for="">job Offered</label>
+            <label for="">Job Offered</label>
             <input type="text" class="form-control" id="status" placeholder="">
           </div>
           
@@ -85,15 +99,29 @@
         <br>
         <div class="text-right">
           <button type="submit" class="btn btn-primary btn-md" id="add-btn">
-            <span class="fa fa-fire"></span>Add Application</button>
-          <p>test for heroku</p>
+           Add Application</button>
         </div>
       </div>
 
     </div>
-  </div>
+  </div><br><br><br>
+  <footer>
+    Copyright© 2019 Resume Tracker
+  </footer>
 </div>
+</div>
+  </body>
 
 <script src="js/job.js" type="text/javascript"></script>
+<script>
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 
 </html>
