--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,28 @@
 </head>
 
 <body onload="typeWriter()">
-        <h1 class="display-4">Resume Tracker</h1>
+        <script>document.body.className += ' fade-out';
+        $(function() {
+            $('body').removeClass('fade-out');
+        });
+    </script>
+    <div id="container">
+<div id="banner">
+  <!-- Top Navigation Menu -->
+<div class="topnav">
+    <a href="#home" class="active" id="resume1">Resume Tracker</a>
+    <!-- Navigation links (hidden by default) -->
+    <div id="myLinks">
+        <a href="index.html">Home</a>
+        <a href="add.html">Add New Application</a>
+        <a href="view.html">View Applications</a>
+    </div>
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+        <h1 class="display-4" id="resume">Resume Tracker</h1>
         
         <p class="lead" id="subtitle"></p>
         <hr class="my-4">
@@ -32,11 +53,65 @@
             <a class="btn btn-primary btn-lg" id="add-home" href="add.html" role="button">Add a New Application</a>
         </p>
     <h2 id="par1_home" onload="displayJobs()">
-        Jobs You Might Want:
-    </h2>
+        Your Recommended Jobs:
+    </h2><br>
+    <div class="row">
+            <div class="col-sm-3">
+              <div class="card" id=card1>
+                <div class="card-body">
+                  <h5 class="card-title">Web Developer</h5>
+                  <p class="card-text">Full time web developer position at IBM</p>
+                  <a href="#" class="btn btn-primary" id="apply">Apply</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Web Developer</h5>
+                  <p class="card-text">Full time web developer position at IBM</p>
+                  <a href="#" class="btn btn-primary" id="apply">Apply</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+                    <div class="card">
+                      <div class="card-body">
+                        <h5 class="card-title">Web Developer</h5>
+                        <p class="card-text">Full time web developer position at IBM</p>
+                        <a href="#" class="btn btn-primary" id="apply">Apply</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-3">
+                        <div class="card">
+                          <div class="card-body">
+                            <h5 class="card-title">Web Developer</h5>
+                            <p class="card-text">Full time web developer position at IBM</p>
+                            <a href="#" class="btn btn-primary" id="apply">Apply</a>
+                          </div>
+                        </div>
+                      </div>
+          </div>
+          
+</div><br><br><br>
+<footer>
+  Copyright© 2019 Resume Tracker
+</footer>
+</div>
 </body>
 
 <script>
+
+  /* Toggle between showing and hiding the navigation menu links when the user clicks on the hamburger menu / bar icon */
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
         var i = 0;
         var txt = 'Welcome to your new way to land a job';
         var speed = 50;
@@ -52,6 +127,8 @@
         function displayJobs() {
 
         }
+
+
         </script>
 
 </html>
