--- a/public/view.html
+++ b/public/view.html
@@ -74,7 +74,7 @@
     </body>
     
 
-  <script src="js/job.js" type="text/javascript">
+  <script src="/js/job.js" type="text/javascript">
   </script>
 
   <script>
