--- a/public/view.html
+++ b/public/view.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="../public/styles/styles.css"> 
+  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,77 +19,80 @@
 
   <!--Boostrap JavaScript-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="container">
 
-      <!-- Top Navigation Menu -->
-<div class="topnav">
-    <a href="#home" class="active" id="resume1">Resume Tracker</a>
-    <!-- Navigation links (hidden by default) -->
-    <div id="myLinks">
-      <a href="index.html">Home</a>
-      <a href="add.html">Add New Application</a>
-      <a href="view.html">View Applications</a>
+    <!-- Top Navigation Menu -->
+    <div class="topnav">
+      <a href="#home" class="active" id="resume1">Resume Tracker</a>
+      <!-- Navigation links (hidden by default) -->
+      <div id="myLinks">
+        <a href="index.html">Home</a>
+        <a href="add.html">Add New Application</a>
+        <a href="view.html">View Applications</a>
+      </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
-    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+    <h1>View All Applications</h1>
+    <p id="dots">•••</p>
+    <a href="index.html" class="btn btn-danger btn-lg" id="home-view">Home</a>
+    <a href="add.html" class="btn btn-danger btn-lg" id="new-app-view">Add New Application</a>
+    <h3>See where you've applied to</h3>
+    <hr>
+
+
   </div>
-      <h1>View All Applications</h1>
-      <p id="dots">•••</p>
-      <a href="index.html" class="btn btn-danger btn-lg" id="home-view">Home</a>
-      <a href="add.html" class="btn btn-danger btn-lg" id="new-app-view">Add New Application</a>
-      <h3>See where you've applied to</h3>
-      <hr>
+  <div class="row">
 
-    
-    </div>
-    <div class="row">
+    <table id="display-info" class="table table-striped"></table>
 
-      <div class="col-lg-12">
+  </div>
+  <div class="row">
 
-        <div class="card">
-          <div class="card-header" id="card-title">
-            Application Database
-          </div>
-          <div class="card-body" id="well-section">
+    <div class="col-lg-12">
 
-<div id ="job-list">
-</div>
-            <!-- Content will go in here -->
-
-          </div>
+      <div class="card">
+        <div class="card-header" id="card-title">
+          Application Database
         </div>
-      </div><br><br><br>
-      <footer>
-        Copyright© 2019 Resume Tracker
-      </footer>
-    </body>
-    
+        <div class="card-body" id="well-section">
+          <div id="job-list">
+          </div>
+          <!-- Content will go in here -->
 
-  <script src="/js/job.js" type="text/javascript">
-  </script>
+        </div>
+      </div>
+    </div><br><br><br>
+    <footer>
+      Copyright© 2019 Resume Tracker
+    </footer>
+</body>
 
-  <script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="/js/job.js" type="text/javascript">
+
+</script>
+
+<script>
   function myFunction() {
-      var x = document.getElementById("myLinks");
-      if (x.style.display === "block") {
-        x.style.display = "none";
-      } else {
-        x.style.display = "block";
-      }
+    var x = document.getElementById("myLinks");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
     }
+  }
 
-  $(document).ready(function(){
+  $(document).ready(function () {
     refreshJobs();
   })
-  </script>
+</script>
 
 </html>
