--- a/public/add.html
+++ b/public/add.html
@@ -93,7 +93,7 @@
                 <label for="">Job Offered</label>
                 <input type="text" class="form-control" id="status" placeholder="">
               </div>
-
+              <input type="hidden" id="id" value="">
             </form>
             <br>
             <div class="text-right">
@@ -110,6 +110,8 @@
     </div>
   </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 
 <script src="/js/job.js" type="text/javascript"></script>
 <script>
