--- a/public/view.html
+++ b/public/view.html
@@ -51,7 +51,7 @@
   </div>
   <div class="row">
 
-    <table id="display-info" class="table table-striped"></table>
+    <table id="display-info" class="table table-striped" style="color:aliceblue"></table>
 
   </div>
   <div class="row">
@@ -76,9 +76,7 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="/js/job.js" type="text/javascript">
-
-</script>
+<script src="/js/job.js" type="text/javascript"></script>
 
 <script>
   function myFunction() {
