--- a/public/view.html
+++ b/public/view.html
@@ -2,14 +2,18 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/resume-favicon.png" type="image/x-icon">
+
   <title>View Applications</title>
+  
+
 
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="../public/styles/styles.css"> 
+  <link rel="stylesheet" type="text/css" href="styles/styles.css"> 
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,28 +23,26 @@
 
   <!--Boostrap JavaScript-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="container">
+    <div id="row>">
+      <div id="col-lg-12">
 
-      <!-- Top Navigation Menu -->
+      <!--Nav Bar-->
 <div class="topnav">
     <a href="#home" class="active" id="resume1">Resume Tracker</a>
-    <!-- Navigation links (hidden by default) -->
+    <!-- Nav Links-->
     <div id="myLinks">
       <a href="index.html">Home</a>
       <a href="add.html">Add New Application</a>
       <a href="view.html">View Applications</a>
     </div>
-    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
+
+    <!--Nav Menu-->
+    <a href="javascript:void(0);" class="icon" onclick="myMenu()"><i class="fa fa-bars"></i></a>
   </div>
       <h1>View All Applications</h1>
       <p id="dots">•••</p>
@@ -48,37 +50,87 @@
       <a href="add.html" class="btn btn-danger btn-lg" id="new-app-view">Add New Application</a>
       <h3>See where you've applied to</h3>
       <hr>
+    </div>
+    </div>
+      <div id=container>
 
-    
     </div>
     <div class="row">
-
       <div class="col-lg-12">
-
-        <div class="card">
+        <div class="card" id="database">
           <div class="card-header" id="card-title">
             Application Database
           </div>
           <div class="card-body" id="well-section">
 
 <div id ="job-list">
+<!--Table-->
+<table class="table">
+    <thead class="thead-dark">
+      <tr>
+          <th scope="col">#</th>
+          <th scope="col">Company</th>
+          <th scope="col">Role</th>
+          <th scope="col">Date Applied</th>
+          <th scope="col">Days Since Applied</th>
+          <th></th>
+          <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+
+      <tr id="row1">
+        <th scope="row">1</th>
+        <td id="company"></td>
+        <td id="role"></td>
+        <td id="date"></td>
+        <td id="days"></td>
+        <td><button id="edit">Edit</button></td>
+        <td><button id="delete">Delete</button></td>
+      </tr>
+
+      <tr id="row2">
+        <th scope="row">2</th>
+        <td id="company"></td>
+        <td id="role"></td>
+        <td id="date"></td>
+        <td id="days"></td>
+        <td><button id="edit">Edit</button></td>
+        <td><button id="delete">Delete</button></td>
+      </tr>
+
+      <tr id="row1">
+        <th scope="row">3</th>
+        <td id="company"></td>
+        <td id="role"></td>
+        <td id="date"></td>
+        <td id="days"></td>
+        <td><button id="edit">Edit</button></td>
+        <td><button id="delete">Delete</button></td>
+      </tr>
+
+    </tbody>
+  </table>
 </div>
-            <!-- Content will go in here -->
+</div>
+</div>
+</div><br><br><br>
 
-          </div>
-        </div>
-      </div><br><br><br>
-      <footer>
-        Copyright© 2019 Resume Tracker
-      </footer>
-    </body>
+<!--Footer-->
+<footer>
+  Copyright© 2019 Resume Tracker
+</footer>
+</div>
+</body>
     
+<!--JavaScript-->
+<script src="/js/job.js" type="text/javascript"></script>
 
-  <script src="/js/job.js" type="text/javascript">
-  </script>
+<script>
 
-  <script>
-  function myFunction() {
+// Nav Menu Display
+  function myMenu() {
       var x = document.getElementById("myLinks");
       if (x.style.display === "block") {
         x.style.display = "none";
