update functionality to delete, display and update

--- a/public/add.html
+++ b/public/add.html
@@ -51,6 +51,10 @@
           <div class="card-body">
             <form action="" method="POST" role="form">
 
+                <input type="hidden" id="job-id">
+
+
+
               <div class="form-group">
                 <label for="">Company Name*</label>
                 <input type="text" class="form-control" id="company-name" placeholder="">
