--- a/public/add.html
+++ b/public/add.html
@@ -54,6 +54,10 @@
           <div class="card-body">
             <form action="" method="POST" role="form">
 
+                <input type="hidden" id="job-id">
+
+
+
               <div class="form-group">
                 <label for="">Company Name*</label>
                 <input type="text" class="form-control" id="company-name" placeholder="">
@@ -96,7 +100,7 @@
                 <label for="">Job Offered</label>
                 <input type="text" class="form-control" id="status" placeholder="">
               </div>
-
+              <input type="hidden" id="id" value="">
             </form>
             <br>
             <div class="text-right">
@@ -113,6 +117,8 @@
     </div>
   </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 
 <script src="/js/job.js" type="text/javascript"></script>
 
