update-table-ata

--- a/public/view.html
+++ b/public/view.html
@@ -72,6 +72,14 @@
                     <th scope="col">Role</th>
                     <th scope="col">Date Applied</th>
                     <th scope="col">Days Since Applied</th>
+                    <th scope="col">Interview Date </th>
+                    <th scope="col">Interviewee Name</th>
+                    <th scope="col">Comments</th>
+                    <th scope="col"> </th>
+                    <th scope="col"> </th>
+
+
+
                     <th></th>
                     <th></th>
                   </tr>
