--- a/public/add.html
+++ b/public/add.html
@@ -12,7 +12,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -98,9 +98,13 @@
               </div>
               <div class="form-group">
                 <label for="">Job Offered</label>
-                <input type="text" class="form-control" id="status" placeholder="">
+                <tr>
+                  <div class="input-group-text" id="checkbox">
+                    <input type="checkbox" id = "checkbox" aria-label="Checkbox for following text input">
+                  Yes</div>
+                </div>
               </div>
-              <input type="hidden" id="id" value="">
+            </tr>
             </form>
             <br>
             <div class="text-right">
