fix-table-error

--- a/public/view.html
+++ b/public/view.html
@@ -75,6 +75,8 @@
                     <th scope="col">Interview Date </th>
                     <th scope="col">Interviewee Name</th>
                     <th scope="col">Comments</th>
+                    <th scope="col">Offer</th>
+
                     <th scope="col"> </th>
                     <th scope="col"> </th>
 
