--- a/public/view.html
+++ b/public/view.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
 
   <!--Font Awesome-->
@@ -75,8 +75,6 @@
                     <th scope="col">Interview Date </th>
                     <th scope="col">Interviewee Name</th>
                     <th scope="col">Comments</th>
-                    <th scope="col">Offer</th>
-
                     <th scope="col"> </th>
                     <th scope="col"> </th>
 
@@ -94,7 +92,7 @@
             </div>
           </div>
         </div>
-      </div><br><br><br>
+      </div>
 
       <!--Footer-->
       <footer>
