--- a/public/add.html
+++ b/public/add.html
@@ -12,7 +12,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -69,7 +69,7 @@
               </div>
 
               <div class="form-group">
-                <label for="">Role Applied For</label>
+                <label for="">Role Interviewed For</label>
                 <input type="text" class="form-control" id="role" placeholder="">
               </div>
 
@@ -114,7 +114,7 @@
           </div>
 
         </div>
-      </div><br><br><br>
+      </div>
       <footer id="footer">
         Copyright© 2019 Resume Tracker
       </footer>
