--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
   <!--Font Awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -104,7 +104,7 @@
     </script>
 
 
-      </div><br><br><br>
+      </div>
       <footer>
         Copyright© 2019 Resume Tracker
       </footer>
