--- a/public/add.html
+++ b/public/add.html
@@ -69,7 +69,7 @@
               </div>
 
               <div class="form-group">
-                <label for="">Role Interviewed For</label>
+                <label for="">Role Applied For</label>
                 <input type="text" class="form-control" id="role" placeholder="">
               </div>
 
