--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <a class="btn btn-primary btn-lg" id="add-home" href="add.html" role="button">Add a New Application</a>
     </p>
     <h2 id="par1_home" onload="displayApps()">
-      Your Recent Applications:
+      Your Recommended Jobs:
     </h2><br>
     <div class="row">
       <div class="col-sm-3">
